# dotpython

./: .csharpierignore  .csharpierrc.json  .editorconfig  .gitignore  Directory.Build.props  Directory.Packages.props  DotPython.sln  README.md  justfile
.github/workflows/: managed-tests.yml  native-abi3.yml
benchmarks/DotPython.Benchmarks/: BenchmarkPrograms.cs  ComparisonSpecializationBenchmarks.cs  CompilerBenchmarks.cs  DotPython.Benchmarks.csproj  FrontEndBenchmarks.cs  ManagedCallDispatchBenchmarks.cs  ManagedCallLocalBenchmarks.cs  ManagedCallSpecializationBenchmarks.cs  ManagedFramePathBenchmarks.cs  ManagedReturnContinuationBenchmarks.cs  ManagedReturnLocalBenchmarks.cs  ManagedReturnPathBenchmarks.cs  OpcodePairProfileReporter.cs  Program.cs  README.md  RuntimeAllocationBenchmarks.cs  RuntimeBenchmarks.cs
native/dotpython-abi3/: .clang-format  .clang-tidy  Cargo.toml  anyver-compatibility.json  anyver-exports.txt  anyver-methods.txt  anyver-stable-abi-symbols.txt  anyver-symbol-manifest.json  anyver-upstream-qualification.json  bridge-exports.txt  build.sh  check-binary-symbols.sh  check-symbol-manifest.sh  failure-stable-abi-symbols.txt  fixture-exports.txt  fixture-methods.txt  format.sh  generate-anyver-symbol-manifest.sh  generate-secondary-symbol-manifest.sh  generate-symbol-manifest.sh  inspect-anyver-wheel.sh  meson.build  meson_options.txt  prepare-anyver-acceptance.sh  secondary-fixture-exports.txt  secondary-fixture-methods.txt  secondary-symbol-manifest.json  stable-abi-symbols.txt  symbol-manifest.json  tidy.sh
native/dotpython-abi3/bridge/: Cargo.toml  build.rs  exports.linux.map  exports.macos.txt
native/dotpython-abi3/bridge/src/: abi.rs  lib.rs
native/dotpython-abi3/fixture/: Cargo.toml  dotpython_fixture.c  dotpython_fixture_init_failure.c  exports.linux.map
native/dotpython-abi3/fixture/src/: lib.rs
native/dotpython-abi3/fixture_failure/: Cargo.toml  build.rs  exports.macos.txt
native/dotpython-abi3/fixture_failure/src/: lib.rs
native/dotpython-abi3/fixture_secondary/: Cargo.toml  build.rs  exports.linux.map  exports.macos.txt
native/dotpython-abi3/fixture_secondary/src/: lib.rs
native/dotpython-abi3/harness/: Cargo.toml  build.rs
native/dotpython-abi3/harness/src/: lib.rs
native/dotpython-abi3/include/: dotpython_abi3.h  dotpython_bridge.h
native/dotpython-abi3/src/: dotpython_abi3.c  dotpython_abi3.cpp
native/dotpython-abi3/subprojects/: catch2.wrap
native/dotpython-abi3/test/: native_anyver_test.c  native_anyver_test.cpp  native_fixture_test.c  native_fixture_test.cpp
samples/DotPython.PerSession/: README.md
samples/DotPython.ProjectReference/: README.md
src/DotPython.Abstractions/: PythonCompatibilityProfile.cs
src/DotPython.Build.Tasks/: CSharpModuleFacadeGenerator.cs  DeterministicFileWriter.cs  DotPython.Build.Tasks.csproj  DotPythonBuildCommand.cs  DotPythonModuleBuildOptions.cs  DotPythonModuleBuilder.cs  Program.cs
src/DotPython.Cli/: DotPython.Cli.csproj  DotPythonCommand.cs  Program.cs
src/DotPython.Compiler/: DotPython.Compiler.csproj  DotPythonBytecodeFormat.cs  PythonCompilationResult.cs  PythonCompiler.cs  PythonLiteralDecoder.cs
src/DotPython.Hosting/: DotPython.Hosting.csproj  DotPythonHost.cs  DotPythonModuleHostingOptions.cs  DotPythonModuleSession.cs  DotPythonServiceCollectionExtensions.cs
src/DotPython.Interop/: DotPython.Interop.csproj
src/DotPython.Language/: PythonLanguageVersion.cs
src/DotPython.ParserGenerator/: ParserGeneratorCapabilities.cs  PythonParseResult.cs  PythonParser.cs
src/DotPython.ParserGenerator.Tool/: DotPython.ParserGenerator.Tool.csproj  Program.cs
src/DotPython.Protocol/: WorkerFrameCodec.cs  WorkerHandshakeNegotiator.cs  WorkerProtocolContracts.cs  WorkerProtocolFaults.cs  WorkerProtocolJsonContext.cs  WorkerProtocolSerializer.cs  WorkerProtocolVersion.cs
src/DotPython.Runtime.Managed/: DotPython.Runtime.Managed.csproj  ManagedPythonModuleRuntime.cs  ManagedRuntimeDescriptor.cs  PythonValueConverter.cs
src/DotPython.Runtime.Native/: NativeBinaryIdentity.cs  NativeLibraryGlobalLoader.cs  StableAbiAnyverLibraryCache.cs  StableAbiFixtureConfiguration.cs  StableAbiFixtureLoader.cs  StableAbiFixtureModule.cs  StableAbiLoadException.cs  StableAbiModule.cs  StableAbiModuleConfiguration.cs  StableAbiModuleLoader.cs  StableAbiProcessLibraryCache.cs  StableAbiSymbolManifest.cs
src/DotPython.Sdk/: DotPython.Sdk.csproj
src/DotPython.StdLib/: DotPython.StdLib.csproj  StandardLibrarySupportStatus.cs
src/DotPython.Worker/: DotPython.Worker.csproj  WorkerObjectHandle.cs  WorkerProcessClient.cs  WorkerProcessOptions.cs  WorkerProcessPool.cs  WorkerProcessState.cs  WorkerResourcePolicy.cs  WorkerSession.cs  (+3 more)
src/DotPython.Worker.App/: BoundedTextWriter.cs  DotPython.Worker.App.csproj  NativeExecutionLane.cs  Program.cs  QualifiedStableAbiObjectProtocol.cs  WorkerHost.cs  WorkerHostOptions.cs  WorkerSessionState.cs
src/DotPython.Worker.Host/: BoundedTextWriter.cs  DotPython.Worker.Host.csproj  NativeExecutionLane.cs  Program.cs  QualifiedStableAbiObjectProtocol.cs  StableAbiModuleCatalog.cs  WorkerHost.cs  WorkerHostOptions.cs  WorkerSessionState.cs
(+160 files in other folders)
